@@ -73,34 +73,34 @@ tcltest::test populatetables-1.1 {Make tables, populate them} {
     set res {}
     maketables
     populatetables
-} {}
+} {3}
 
-foreach arr [simpledb::items computer] {
-    lappend arrlist [arraysort $arr]
-}
-puts [lsort -index 9 $arrlist]
+# foreach arr [simpledb::items computer] {
+#     lappend arrlist [arraysort $arr]
+# }
+# puts [lsort -index 9 $arrlist]
 
-simpledb::setitem computer $lt3 {
-    price 2000
-}
+# simpledb::setitem computer $lt3 {
+#     price 2000
+# }
 
-simpledb::setitem computer $lt3 {
-    price 3000
-}
+# simpledb::setitem computer $lt3 {
+#     price 3000
+# }
 
-puts "getitem computer lt1: [simpledb::getitem computer $lt1]"
+# puts "getitem computer lt1: [simpledb::getitem computer $lt1]"
 
-puts "finditems: [simpledb::finditems computer {
-    gfx Permedia
-    cpu PII
-}]"
+# puts "finditems: [simpledb::finditems computer {
+#     gfx Permedia
+#     cpu PII
+# }]"
 
-foreach item [simpledb::finditems computer {
-    gfx *
-}] {
-    puts [simpledb::getitem computer $item]
-}
+# foreach item [simpledb::finditems computer {
+#     gfx *
+# }] {
+#     puts [simpledb::getitem computer $item]
+# }
 
-simpledb::synctostorage session.tcl
+# simpledb::synctostorage session.tcl
 
 tcltest::cleanupTests
