@@ -1,3 +1,12 @@
+2004-01-15  David N. Welton  <davidw@dedasys.com>
+
+	* rivet/packages/simpledb/simpledb.tcl (simpledb::synctostorage):
+	Added fix from Massimo Manghi <manghi@biol.unipr.it> for bug in
+	procedure to write database to disk.
+
+	* rivet/packages/simpledb/simpledb.test (populatetables):
+	Commented out stuff to add into the test later.
+
 2004-01-08  David N. Welton  <davidw@dedasys.com>
 
 	* src/make.tcl: Added warning to default make.tcl target in order
